# DocumentScannerAI

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Main.ui  README.md  config.py  gui_main.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
analysis/: ai_analysis.py  keyword_analysis.py
file_handlers/: pdf_handler.py
reports/: report_generator.py
sample_resumes/: sample.pdf_report.txt
security/: error_handling.py  validation.py
security/utils/: pdfid_stub.py
tests/: test_all.py  test_full_pipeline.py  test_keyword_analysis.py  test_ollama_response.py  test_pdf_handler.py  test_pdf_handler_manual.py
ui/: __init__.py  main_window.py  styles.py  workers.py
utils/: __init__.py  html_helpers.py  logger.py  validators.py
